[tool.poetry]
name = "attendance-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "attendance_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
channels = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
